# 08_opencv

./: CMakeLists.txt  main.cpp
src/: MyOpenCV.cpp  MyOpenCV.h
